# atlas-drake

bindings/pydrake/: common_py.cc
bindings/pydrake/multibody/test/: rigid_body_plant_test.py  rigid_body_tree_test.py
bindings/pydrake/solvers/test/: ipopt_solver_test.py  pr2_ik_test.py  rbt_ik_test.py
bindings/pydrake/test/: all_test.py
common/: resource_tool.cc
common/test_utilities/disable_python_unittest/unittest/: __init__.py
examples/atlas/urdf/: atlas_convex_hull.urdf
examples/cubli/: BUILD.bazel  Cubli.urdf  passive_simulation.cc
examples/pendulum/: energy_shaping_simulation.cc  lqr_simulation.cc  trajectory_optimization_simulation.cc
examples/pendulum/test/: urdf_dynamics_test.cc
examples/valkyrie/: BUILD.bazel  README.md  atlas_constants.cc  atlas_constants.h  atlas_simulation.cc  atlas_simulator.h  box.cc  box_atlas.cc  box_atlas.h
examples/valkyrie/test/: atlas.alias_groups  atlas.id_controller_config
examples/valkyrie/urdf/atlas_urdf/: atlas_convex_hull.urdf  atlas_minimal_contact.urdf
multibody/rigid_body_plant/test/: rigid_body_plant_test.cc
multibody/test/rigid_body_tree/: rigid_body_tree_clone_test.cc
systems/sensors/test/accelerometer_test/: accelerometer_example_diagram.cc
tools/lint/: buildifier.py  library_lint_reporter.py  util.py
tools/lint/test/: buildifier_test.py  util_test.py
tools/workspace/drake_visualizer/: drake_visualizer.py
tools/workspace/godotengine/: main_build_gles3_headers.py
